--- a/TekstVerwerken/MainWindow.xaml
+++ b/TekstVerwerken/MainWindow.xaml
@@ -6,11 +6,29 @@
         mc:Ignorable="d"
         Title="Werken met tekst" Height="350" Width="800">
     <StackPanel Margin="25">
-        <TextBlock TextAlignment="Center" FontSize="24" TextWrapping="Wrap"
+        <!--<TextBlock TextAlignment="Center" FontSize="24" TextWrapping="Wrap"
                    Background="Aqua" Foreground="Blue" ToolTip="Voorbeeldtekst">
             Dit is een <Italic>voorbeeld</Italic> van <LineBreak /> het
             <Bold>gebruik</Bold> van <Underline>WERKEN MET</Underline>
             <Span Background="Yellow" FontSize="42">TEKST</Span>
-        </TextBlock>
+        </TextBlock>-->
+
+        <Grid Margin="25">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="40" />
+                <RowDefinition Height="40" />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
+            <Label Grid.Row="0" Grid.Column="0" Margin="5" Content="_Gebruikersnaam" />
+            <Label Grid.Row="1" Grid.Column="0" Margin="5" Content="_Paswoord" />
+            <TextBox Grid.Row="0" Grid.Column="1" Margin="5" Name="textBoxGebruikersnaam" VerticalContentAlignment="Center"  />
+            <PasswordBox Name="psdBox" Grid.Row="1" Grid.Column="1" Margin="5" MaxLength="8" PasswordChar="?"  VerticalContentAlignment="Center"  />
+        </Grid>
+
+        <Button Content="Probeer maar aan te melden" Margin="0,10,0,10" Click="Button_Click"></Button>
+        <TextBlock Name="textBlockAanmelding"></TextBlock>
     </StackPanel>
 </Window>
